--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
     <audio src="sons/perdido.mp3" preload="auto" id="somPerdido"></audio>
     <audio src="sons/resgate.mp3" preload="auto" id="somResgate"></audio>
     <!-- Fim da div container !-->
+    <!--
     <script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" src="js/js.js"></script>
+!-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script type="text/javascript" src="js/js.js"></script>
     <script type="text/javascript" src="js/jquery-collision.min.js"></script>
   </body>
 </html>
